# temporal-kcore

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  REPORT.md  SCALING.csv  SCALING.md  SCALING_B.csv  SCALING_B.md  TEMPORAL_RESOLUTION.csv  TEMPORAL_RESOLUTION.md
apps/: benchmark.cpp
data/: sample_small.tedges
include/tkcore/: dense_core.hpp  filtered_core.hpp  kcore.hpp  loader.hpp  persistent_core.hpp  pseudocore.hpp  span_core.hpp  stable_core.hpp  statistics.hpp  temporal_graph.hpp
python/: analyze.py  benchmark_all.py  example.py  generate_synthetic.py  resolution_benchmark.py  scaling_benchmark.py  scaling_benchmark_nopseudo.py
src/: bindings.cpp  dense_core.cpp  filtered_core.cpp  kcore.cpp  loader.cpp  persistent_core.cpp  pseudocore.cpp  span_core.cpp  stable_core.cpp  statistics.cpp  temporal_graph.cpp
tests/: test_dense.cpp  test_filtered.cpp  test_kcore.cpp  test_persistent.cpp  test_pseudo.cpp  test_span.cpp  test_stable.cpp
